--- a/Gym_Membership/App.config
+++ b/Gym_Membership/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="Gym_Membership.Properties.Settings.GymMembershipConnectionString"
-            connectionString="Data Source=LAPTOP-9TASG5E3\SQLEXPRESS;Initial Catalog=GymMembership;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+            connectionString="Data Source=LAPTOP-VQRQBKBN\SQLEXPRESS;Initial Catalog=GymMembership;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
